--- a/setup.cfg
+++ b/setup.cfg
@@ -70,3 +70,9 @@ test_all_strict        = test_all
 
 bdist_win32     =  bdist_wininst --plat-name=win32
 bdist_win64     =  bdist_wininst --plat-name=win-amd64
+
+
+[tool:pytest]
+adopts          = --doctest-modules --doctest-report ndiff
+doctest_optionflags= NORMALIZE_WHITESPACE ELLIPSIS
+
