enh(CIs): only install test-deps,not full devs

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,22 +17,10 @@ before_install:
 
 install:
     - python --version
-    - pip install -e .[dev]
+    - pip install -e .[test]
     - pip list
 
 script:
-    - |
-        echo "+++ Checking README for PyPy...."
-        ./bin/check_readme.sh
-
-    - |
-        echo "+++ Checking site...."
-        python setup.py build_sphinx
-
-    - |
-        echo "+++  Checking archives for PyPI repo..."
-        python setup.py sdist bdist_wheel
-
     - |
         if [[ "$TRAVIS_PYTHON_VERSION" = '3.5' ]]; then
             echo "+++ Checking all TCs, DTs & Coverage....";
@@ -45,6 +33,20 @@ script:
     -   echo "+++ Checking install...."
         python setup.py install
         python setup.py build
+
+    - |
+        echo "+++  Checking archives for PyPI repo..."
+        python setup.py sdist bdist_wheel
+
+    - |
+        echo "+++ Checking site...."
+        pip install -e .[test,doc]
+        python setup.py build_sphinx
+
+    - |
+        echo "+++ Checking README for PyPy...."
+        pip install -e .[dev]
+        ./bin/check_readme.sh
 
 after_success:
     - if [[ $TRAVIS_PYTHON_VERSION == '3.5' ]]; then coveralls; fi
