--- a/setup.cfg
+++ b/setup.cfg
@@ -73,6 +73,6 @@ bdist_win64     =  bdist_wininst --plat-name=win-amd64
 
 
 [tool:pytest]
-adopts          = --doctest-modules --doctest-report ndiff
+addopts          = --doctest-modules --doctest-report ndiff
 doctest_optionflags= NORMALIZE_WHITESPACE ELLIPSIS
 
