fix(build): pytest ignore setup.py etc

--- a/setup.cfg
+++ b/setup.cfg
@@ -73,6 +73,19 @@ bdist_win64     =  bdist_wininst --plat-name=win-amd64
 
 
 [tool:pytest]
-addopts          = --doctest-modules --doctest-report ndiff
+# Ignore symlink trick to refer to README-images from sphinx-files in docs/
+norecursedirs       = doc/doc
+addopts =
+    -ra
+    --doctest-modules
+    --doctest-report ndiff
+    --doctest-continue-on-failure
+    --ignore-glob=*venv*
+    --ignore=build
+    --ignore=setup.py
+    --ignore=docs/conf.py
+    # Avoid sidefx of importing cmd-files.
+    --ignore=bin
+    --ignore-glob=scratch*
 doctest_optionflags= NORMALIZE_WHITESPACE ELLIPSIS
 
