--- a/setup.cfg
+++ b/setup.cfg
@@ -87,5 +87,6 @@ addopts =
     # Avoid sidefx of importing cmd-files.
     --ignore=bin
     --ignore-glob=scratch*
+    --cov-fail-under=80
 doctest_optionflags= NORMALIZE_WHITESPACE ELLIPSIS
 
