chore(VER): bump v0.4.0-->v.5.0; CHANGES

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,16 @@
 {
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
-    "python.pythonPath": "venv/bin/python",
+    "python.pythonPath": ".venv/bin/python",
     "python.testing.pytestArgs": [
         "--doctest-modules", 
         "--doctest-report", "ndiff",
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.testing.pytestEnabled": true,
+    "cSpell.words": [
+        "BACKPORT",
+        "Quickstart"
+    ]
 }
